<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">application3</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_confirmar_senha">Confirmar senha</string>
    <string name="msg_esqueci_minha_s">Esqueci minha senha</string>
    <string name="lbl_registrar">Registrar</string>
    <string name="lbl_cadastre_se">Cadastre-se</string>
    <string name="lbl_22">22</string>
    <string name="lbl_00">00</string>
    <string name="lbl_agenda">Agenda</string>
    <string name="lbl_05">05</string>
    <string name="lbl2">/</string>
    <string name="lbl3">:</string>
    <string name="lbl_voltar2">VOLTAR</string>
    <string name="lbl_07">07</string>
    <string name="lbl_voltar">Voltar</string>
    <string name="lbl_matem_tica">MATEMÁTICA</string>
    <string name="lbl_s_rgio">Sérgio</string>
    <string name="lbl_agendar_aula">Agendar Aula</string>
    <string name="lbl_portugu_s">PORTUGUÊS</string>
    <string name="lbl_geografia">GEOGRAFIA</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_educa_me">EDUCA.ME</string>
    <string name="msg_rm80927_fiap_co">RM80927@FIAP.COM.BR</string>
    <string name="msg_mantenha_me_con">Mantenha-me conectado</string>
    <string name="lbl_marisa">Marisa</string>
    <string name="lbl_aula_ao_vivo">Aula Ao Vivo !</string>
    <string name="lbl_18">18</string>
    <string name="msg_enviamos_um_ema">Enviamos um email de confirmação, por favor entre no link no corpo do email e faça o login na plataforma</string>
    <string name="lbl">*************</string>
    <string name="msg_professor_organ">Professor organizado e proativo, com mais de 4 anos trabalhando em escolas e com experiências de vonluntário em creche.</string>
    <string name="lbl_entrar">ENTRAR</string>
    <string name="lbl_aluno">ALUNO</string>
    <string name="lbl_carlos">Carlos</string>
    <string name="lbl_confirmar">Confirmar</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="lbl_marcar_aula">Marcar aula</string>
</resources>
