<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="matRiasVM" type="com.application.app.modules.matrias.data.viewmodel.MatRiasVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearMatrias"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_purple_300">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnrectangleten"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyledeep_purple_300">
            <View
                android:background="@drawable/rectangle_bg_purple_800_radius_2"
                android:id="@+id/viewRectangleTen"
                android:layout_height="@dimen/_4pxv"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_9pxv" android:layout_width="@dimen/_20pxh"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowrectangleeleven"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View
                    android:background="@drawable/rectangle_bg_purple_800_radius_2"
                    android:id="@+id/viewRectangleEleven"
                    android:layout_height="@dimen/_4pxv"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_20pxh"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtWeburl"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_207pxh"
                    android:layout_weight="0.77"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{matRiasVM.matRiasModel.txtWeburl}"
                    style="@style/txtLexendPetaregular10" tools:text="@string/lbl_educa_me"/>
            </LinearLayout>
            <View
                android:background="@drawable/rectangle_bg_purple_800_radius_2"
                android:id="@+id/viewRectangleTwelve"
                android:layout_height="@dimen/_4pxv"
                android:layout_marginBottom="@dimen/_9pxv"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh" android:layout_width="@dimen/_20pxh"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnmatemtica"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
            <LinearLayout android:id="@+id/linearRowmatemtica"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMATEMTICA"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_17pxv"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_weight="0.75"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{matRiasVM.matRiasModel.txtMATEMTICA}"
                    style="@style/txtLexendPetaregular14_1" tools:text="@string/lbl_matem_tica"/>
                <ImageView android:id="@+id/imageUser"
                    android:layout_height="@dimen/_36pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_23pxh"
                    android:layout_marginStart="@dimen/_109pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="@dimen/_41pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowportugus"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="match_parent"
                android:visibility ="gone"
                android:orientation="horizontal" style="@style/groupStylewhite_A700cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPORTUGUS"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_17pxv"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_weight="0.73"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{matRiasVM.matRiasModel.txtPORTUGUS}"
                    style="@style/txtLexendPetaregular14_1" tools:text="@string/lbl_portugu_s"/>
                <ImageView android:id="@+id/imageUserOne"
                    android:layout_height="@dimen/_36pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_23pxh"
                    android:layout_marginStart="@dimen/_119pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="@dimen/_41pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearRowgeografia"
                style="@style/groupStylewhite_A700cornerRadius"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginBottom="@dimen/_580pxv"
                android:visibility = "gone"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtGEOGRAFIA"
                    style="@style/txtLexendPetaregular14_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_weight="0.73"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{matRiasVM.matRiasModel.txtGEOGRAFIA}"
                    tools:text="@string/lbl_geografia" />

                <ImageView
                    android:id="@+id/imageUserTwo"
                    android:layout_width="@dimen/_41pxh"
                    android:layout_height="@dimen/_36pxh"
                    android:layout_marginStart="@dimen/_119pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_marginEnd="@dimen/_23pxh"
                    android:layout_marginBottom="@dimen/_6pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_user"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_user" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
